NewFile Dialog: allow to accept directory creation before stat has run

Cache the fact the user tried to accept the dialog and apply it when checks and stat have been run.

BUG: 429838
FIXED-IN: 5.77